Regression: Topology Auto-Masking no longer recognizing disconnected geometry #104090

Closed
opened 2023-01-23 14:53:00 +01:00 by Julien Kaspar · 7 comments
Member

System Information
Operating system: Linux-5.15.0-58-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.108.03

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-23 06:31, hash: 64dbfe714b
Worked: 3.5.0 Alpha, branch: master, commit date: 2023-01-19 09:41, hash: 2907227db2
Caused by 9889918fd4

Short description of error
The topology auto-masking has two use cases:

  • Don't affect mesh islands that are not connected
  • (On brushes like Grab) Don't affect geometry that isn't connected anywhere within the brush radius.

The second use case is no longer working.

Exact steps for others to reproduce the error

  • Add a torus
  • Enter sculpt mode and use the Grab brush
  • Push one side into the other with a single stroke
  • Enable "Topology" auto-masking via Alt A
  • Try to grab an intersecting part of the mesh with a small brush radius (Small enough that the connection between the two areas is not within the radius)
**System Information** Operating system: Linux-5.15.0-58-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.108.03 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-23 06:31, hash: `64dbfe714b` Worked: 3.5.0 Alpha, branch: master, commit date: 2023-01-19 09:41, hash: `2907227db2` Caused by 9889918fd4 **Short description of error** The topology auto-masking has two use cases: - Don't affect mesh islands that are not connected - (On brushes like Grab) Don't affect geometry that isn't connected anywhere within the brush radius. The second use case is no longer working. **Exact steps for others to reproduce the error** - Add a torus - Enter sculpt mode and use the Grab brush - Push one side into the other with a single stroke - Enable "Topology" auto-masking via `Alt A` - Try to grab an intersecting part of the mesh with a small brush radius (Small enough that the connection between the two areas is not within the radius)
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Author
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Author
Member

@JosephEagar This might be because of the the recent updates to auto-masking.

@JosephEagar This might be because of the the recent updates to auto-masking.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by 789ab9b92a

This issue was referenced by 789ab9b92aff9a576a3d926583b1446827937fa9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2023-01-24 20:04:50 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104090
No description provided.