Sculpt: Fix T104090: Automask topology not constrained by brush radius